Fixed Warning:include_once(includes/sector_fighters.php): failed to open stream: No such file or directory in modify_defences.php
Fixed Notice: Undefined variable: mine_hullsize in traderoute.php
Removed two lines of language log lines that should of been there (not used) in attack.php
Fixed Incorrect language variable was $l_att_ysal2 should be $l_att_ysalv2 in attack.php

TheMightyDude (24 July 2012)
--------------------------------------
Fixed Notice: Undefined variable: mine_hullsize in planet_report_ce.php
Fixed Notice: Use of undefined constant owner - assumed 'owner' in sched_news.php
Fixed Missing argument 2 for defence_vs_defence() was missing first argument of $db
Fixed Notice: Undefined variable: organics_buy in traderoute.php

TheKabal (24 July 2012)
--------------------------------------
Set db_logging to be a property of $db ($db->logging), reducing the need to pass that value to functions

TheKabal (23 July 2012)
--------------------------------------
Make SQL keywords consistently uppercase

TheMightyDude (23 July 2012)
--------------------------------------
Fixed Notice: Use of undefined constant zone_id - assumed 'zone_id' in admin.php
Fixed Notice: Use of undefined constant port_type - assumed 'port_type' in admin.php
Fixed Notice: Use of undefined constant name - assumed 'name' in admin.php
Fixed some cleanups of '?' to ? (cannot have single quotes around ?)
Fixed Notice:  Undefined variable: totalmines in check_mines.php
Fixed Notice: Use of undefined constant name - assumed 'name' in igb.php
Fixed Notice: Use of undefined constant ship_id - assumed 'ship_id' in igb.php
Fixed Notice: Use of undefined constant turns_used - assumed 'turns_used' in igb.php
Fixed Notice: Use of undefined constant balance - assumed 'balance' in igb.php
Fixed Notice:  Object of class ADORecordSet_mysqlt could not be converted to int in explode_mines.php
Fixed undefined indexes and offsets for the logs.
Fixed correct background image for newplayer.html